(Fixed) Text aligns for headers

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -14,6 +14,7 @@
         color: $color-white;
         margin: 0;
         padding: 1rem 0 0;
+        text-align: center;
     }
 
     h2 {
@@ -22,6 +23,7 @@
         color: $color-white;
         margin: 0;
         padding: .5rem 0 0;
+        text-align: center;
     }
 
     .socialIconGroup {
